change hero about and contact images

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
               
 
-                <img  src="./assets/computer.jpg" alt="hero" class="img img-responsive" height="400px" width="100%" style="margin: 20px 0px 30px 20px ;" >
+                <img  src="./assets/happy2.jpg" alt="hero" class="img img-responsive" height="400px" width="100%" style="margin: 20px 0px 30px 20px ;" >
         </div>
         <div class="col-md-6">
             <form>
