add mail sumision action

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
 
         <div class="container">
-            <form  action="https://formspree.io/f/mdorgnwq" method="POST">
+            <form   action="https://formspree.io/f/xeqbgged" method="POST">
                 <div class="row">
                     <div class="col-md-6">
                         <label for="fname">First name *</label><br>
@@ -176,10 +176,10 @@
                 </select><br/>
 
                     <label for="idnumber">Amount *</label> <br>
-                    <input type="checkbox" id="3500GHC" name="Amount" value="3500GHC">
+                    <input type="checkbox" id="3500GHC" name="Amount" value="3,500GHC">
                     <label for="vehicle1"> 3,500GHC </label><br>
                     <input type="checkbox" id="500GHC" name="Amount" value="5,000GHC">
-                    <label for="vehicle2"> 50,00GHC </label><br>
+                    <label for="vehicle2"> 5,000GHC </label><br>
                     <input type="checkbox" id="1000GHC" name="Amount" value="10,000GHC">
                     <label for="vehicle3"> 10,000GHC </label><br><br><br><br>
 
